<resources>
    <string name="app_name">MyMediCare Welcome</string>
    <string name="readings">Please Enter The Details Below:</string>
    <string name="welcome">Welcome Please Log In</string>
    <string name="Id">id</string>
    <string name="Firstname">Firstname</string>
    <string name="Surname">Surname</string>
    <string name="Telephone">Telephone No.</string>
    <string name="Postcode">Postcode</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="Finish">Finish</string>
    <string name="newreg">Or Please Register</string>
    <string name="newreg1">Please Register</string>
    <string name="title_activity_main_activity2">Please Register Below</string>
    <string name="title_activity_database">Database</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="phone_label">Enter Phone Number:</string>
    <string name="sms_label">Enter SMS Message:</string>
    <string name="send_sms_label">Send SMS</string>
    <string name="title_activity_sms">SMS</string>
    <string name="username">Username</string>
    <string name="Register">Register</string>
    <string name="title_activity_register">Register</string>
    <string name="TempC">Temperature Centigrade:</string>
    <string name="TempF">Temperature Fahrenheit:</string>
    <string name="BPS">Blood Pressure High Number:</string>
    <string name="BPD">Blood Pressure Low Number:</string>
    <string name="HeartR">Heart Rate(BPM):</string>
    <string name="Result">Result</string>
</resources>
